--- a/app/src/main/res/layout/fragment_services_offered.xml
+++ b/app/src/main/res/layout/fragment_services_offered.xml
@@ -3,16 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LoginActivity">
+    tools:context=".ServicesOfferedFragment">
 
-    <com.google.android.gms.common.SignInButton
-        android:id="@+id/googleSignInButton"
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
+        android:layout_height="match_parent"
+        android:text="Services Offered"
         android:layout_centerVertical="true"
-        android:paddingEnd="@dimen/singUpPadding"
-        android:paddingStart="@dimen/singUpPadding" />
-
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
