--- a/app/src/main/res/layout/fragment_services.xml
+++ b/app/src/main/res/layout/fragment_services.xml
@@ -16,7 +16,8 @@
             android:id="@+id/tabLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/googleRed" />
+            android:background="@color/oceanBlue"
+            app:tabIndicatorColor="#000"/>
 
         <android.support.v4.view.ViewPager
             android:id="@+id/viewPager"
