--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#333</color>
+    <color name="colorPrimaryDark">#000</color>
+    <color name="colorAccent">#FFFFFF</color>
     <color name="googleRed">#dd4b39</color>
+    <color name="colorLightGray">#666666</color>
+    <color name="transparent">#00000000</color>
+    <color name="oceanBlue">#0077be</color>
+
 </resources>
