--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,8 @@
     <dimen name="nav_header_height">176dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
 
+    <dimen name="myprofile_element_height">72dp</dimen>
+    <dimen name="icon_myprofile_margin">18dp</dimen>
+    <dimen name="text_myprofile_margin">66dp</dimen>
+
 </resources>
