--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -10,13 +10,13 @@
             android:title="@string/offers" />
 
         <item
-            android:id="@+id/messages"
+            android:id="@+id/nav_messages"
             android:icon="@drawable/ic_messages"
             android:title="@string/messages" />
         <item
-            android:id="@+id/nav_manage"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="Narzędzia" />
+            android:id="@+id/nav_myoffers"
+            android:icon="@drawable/ic_myoffert"
+            android:title="@string/my_offerts" />
     </group>
 
     <item android:title="@string/user">
@@ -35,11 +35,11 @@
     <item android:title="@string/others">
         <menu>
             <item
-                android:id="@+id/tutorial"
+                android:id="@+id/nav_tutorial"
                 android:icon="@drawable/ic_tutorial"
                 android:title="@string/tutorial" />
             <item
-                android:id="@+id/about_application"
+                android:id="@+id/nav_aboutapplication"
                 android:icon="@drawable/ic_about_app"
                 android:title="@string/about_app" />
         </menu>
