--- a/app/src/main/res/layout/fragment_my_profile.xml
+++ b/app/src/main/res/layout/fragment_my_profile.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MyProfileFragment">
+    tools:context="pl.denislewandowski.bankczasu.MyProfileFragment">
 
     <RelativeLayout
         android:layout_width="match_parent"
