--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -7,12 +7,14 @@
         <item
             android:id="@+id/nav_services_offered"
             android:icon="@drawable/ic_menu_clock"
+            android:checked="true"
             android:title="@string/offers" />
 
         <item
             android:id="@+id/nav_messages"
             android:icon="@drawable/ic_messages"
             android:title="@string/messages" />
+
         <item
             android:id="@+id/nav_myoffers"
             android:icon="@drawable/ic_myoffert"
