--- a/app/src/main/res/layout/fragment_services_offered.xml
+++ b/app/src/main/res/layout/fragment_services_offered.xml
@@ -3,11 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="pl.denislewandowski.bankczasu.ServicesOfferedFragment">
+    tools:context="pl.denislewandowski.bankczasu.fragments.ServicesOfferedFragment">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view_offered"
-        android:layout_margin="8dp"
+        android:layout_margin="2dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
