--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -1,31 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="pl.denislewandowski.bankczasu.SignUpActivity"
-    android:background="@color/oceanBlue" >
-
-    <ImageView
-        android:id="@+id/logo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="30dp"
-        android:src="@drawable/ic_logo" />
-
-    <TextView
-        android:id="@+id/app_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/logo"
-        android:layout_centerHorizontal="true"
-        android:text="@string/app_name"
-        android:textColor="#FFF"
-        android:textSize="30sp"
-        android:textStyle="bold" />
-
+    android:background="@drawable/background_login"
+    tools:context="pl.denislewandowski.bankczasu.activities.SignUpActivity">
 
     <LinearLayout
         android:id="@+id/loginLayout"
@@ -33,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/app_name"
         android:layout_marginStart="55dp"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="260dp"
         android:layout_marginEnd="55dp"
         android:orientation="vertical">
 
@@ -43,6 +22,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/transparent"
+            android:layout_marginTop="6dp"
             android:drawableStart="@drawable/ic_email_white"
             android:drawablePadding="12dp"
             android:hint="Email..."
@@ -94,21 +74,19 @@
             android:layout_marginTop="2dp"
             android:background="#FFF" />
 
+
+        <Button
+            android:id="@+id/signUpButton"
+            android:layout_width="match_parent"
+            android:layout_height="44dp"
+            android:layout_marginTop="36dp"
+            android:layout_marginBottom="24dp"
+            android:background="#FFF"
+            android:shadowColor="#888"
+            android:text="@string/sign_up"
+            android:textColor="#606060" />
     </LinearLayout>
 
-    <Button
-        android:id="@+id/signUpButton"
-        android:layout_width="match_parent"
-        android:layout_height="44dp"
-        android:layout_below="@id/loginLayout"
-        android:layout_marginStart="55dp"
-        android:layout_marginTop="36dp"
-        android:layout_marginEnd="55dp"
-        android:layout_marginBottom="24dp"
-        android:background="#FFF"
-        android:shadowColor="#888"
-        android:text="@string/sign_up"
-        android:textColor="#606060" />
 
 
 </RelativeLayout>
