--- a/app/src/main/res/layout/dialog_about_application.xml
+++ b/app/src/main/res/layout/dialog_about_application.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="pl.denislewandowski.bankczasu.AboutApplicationDialogFragment">
+    tools:context="pl.denislewandowski.bankczasu.dialogs.AboutApplicationDialogFragment">
 
     <TextView
         android:id="@+id/dialog_title"
