--- a/app/src/main/res/layout/fragment_services.xml
+++ b/app/src/main/res/layout/fragment_services.xml
@@ -5,7 +5,7 @@
     android:id="@+id/fragment_services"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="pl.denislewandowski.bankczasu.ServicesFragment">
+    tools:context="pl.denislewandowski.bankczasu.fragments.ServicesFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
