--- a/app/src/main/res/layout/offer_list_item.xml
+++ b/app/src/main/res/layout/offer_list_item.xml
@@ -2,25 +2,69 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="80dp"
-    android:background="@color/oceanBlue">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/oceanBlue"
+    android:theme="@style/ThemeOverlay.AppCompat.Dark">
+
+        <ImageView
+            android:layout_height="70dp"
+            android:layout_width="70dp"
+            android:id="@+id/category_image"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:scaleType="centerInside"
+            android:background="@drawable/oval_background_white"
+            android:src="@drawable/ic_home">
+        </ImageView>
 
     <TextView
         android:id="@+id/offer_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="24dp"
+        android:layout_margin="4dp"
+        android:layout_toEndOf="@id/category_image"
         android:text="Oferta"
         android:textColor="#FFF"
-        android:textSize="16sp"
-        android:textStyle="bold" />
+        android:textSize="20sp" />
+
+    <TextView
+        android:id="@+id/date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toEndOf="@id/category_image"
+        android:layout_alignParentBottom="true"
+        android:layout_margin="4dp"
+        android:text="Wystawiono: 13-11-2018"
+        />
 
     <ImageView
         android:id="@+id/star_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        android:layout_margin="24dp"
+        android:layout_margin="4dp"
         android:src="@drawable/ic_star_empty" />
+
+    <TextView
+        android:id="@+id/time_currency_value_list"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="2dp"
+        android:textColor="#FFF"
+        android:textSize="18sp"
+        android:layout_toStartOf="@id/time_currency_img"
+        android:layout_alignParentBottom="true"
+        android:text="0"
+        />
+
+    <ImageView
+        android:id="@+id/time_currency_img"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_margin="4dp"
+        android:src="@drawable/ic_timecurrency" />
 
     <View
         android:layout_width="match_parent"
