BNKC-5 BNKC-17 User can create/join to time bank. User can see offerts

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -8,7 +8,7 @@
             android:id="@+id/nav_services_offered"
             android:icon="@drawable/ic_menu_clock"
             android:checked="true"
-            android:title="@string/offers" />
+            android:title="@string/app_name" />
 
         <item
             android:id="@+id/nav_messages"
