--- a/app/src/main/res/layout/fragment_myservices.xml
+++ b/app/src/main/res/layout/fragment_myservices.xml
@@ -3,10 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="pl.denislewandowski.bankczasu.fragments.ServicesOfferedFragment">
+    tools:context="pl.denislewandowski.bankczasu.fragments.MyServicesFragment">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_view_offered"
+        android:id="@+id/recycler_view_myservices"
         android:layout_margin="2dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
