--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,8 @@
 <resources>
     <color name="colorPrimary">#013859</color>
     <color name="colorPrimaryDark">#000</color>
-    <color name="colorAccent">#FFFFFF</color>
+    <!--<color name="colorAccent">#FFFFFF</color>-->
+    <color name="colorAccent">#AAA</color>
     <color name="googleRed">#dd4b39</color>
     <color name="colorLightGray">#666666</color>
     <color name="transparent">#00000000</color>
